# AI_framework

./: LICENSE  README.md  pyproject.toml  requirements.txt
ai_framework/: eeg_features_frequency.py  eeg_features_microstate.py  eeg_features_nonlinear.py  eeg_features_time.py  eeg_preprocess.py  ml_data_preprocessing.py  ml_feature_selection.py  ml_tuning_calib_interpret.py  nested_feature_selection.py  nested_ml_tuning_calib_interpret.py  pipeline_microstates.py  post_analysis.py  utils.py
ai_framework.egg-info/: PKG-INFO  SOURCES.txt
tutorial/: feature_selection.ipynb
tutorial/tutorial/run_1/breast_cancer/: all_features_X_raw.npy  final_features_X_raw.npy  final_features_feature_names.json
