[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-framework"
version = "1.0.0"
description = "AI framework for EEG feature extraction and modeling"
readme = "README.md"
requires-python = ">=3.9"

authors = [{ name = "Nehemiah Zewde" }]
license = { text = "MIT" }  # change if needed
keywords = ["EEG", "EEG feature extraction", "machine-learning", "neuroscience"]

classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX",
]


dependencies = [
  "alembic>=1.17.2",
  "autoreject>=0.4.3",
  "bayesian-optimization>=3.2.0",
  "betacal>=1.1.0",
  "cloudpickle>=3.1.2",
  "colorlog>=6.10.1",
  "contourpy>=1.3.3",
  "cycler>=0.12.1",
  "docopt>=0.6.2",
  "et_xmlfile>=2.0.0",
  "feature_engine>=1.9.3",
  "filelock>=3.20.0",
  "fonttools>=4.61.1",
  "fsspec>=2025.10.0",
  "greenlet>=3.3.0",
  "h5io>=0.2.5",
  "h5py>=3.15.1",
  "infomeasure>=0.5.0",
  "joblib>=1.5.2",
  "kiwisolver>=1.4.9",
  "lazy_loader>=0.4",
  "llvmlite>=0.45.1",
  "Mako>=1.3.10",
  "matplotlib>=3.10.6",
  "missingno>=0.5.2",
  "mne>=1.10.2",
  "mne-features>=0.3",
  "mpmath>=1.3.0",
  "narwhals>=2.13.0",
  "networkx>=3.6",
  "neurokit2>=0.2.12",
  "numba>=0.62.1",
  "numpy>=2.3.5",
  "openpyxl>=3.1.5",
  "optuna>=4.6.0",
  "pandas>=2.3.3",
  "parameterized>=0.9.0",
  "patsy>=1.0.2",
  "phik>=0.12.5",
  "pillow>=12.0.0",
  "plotly>=6.5.0",
  "pooch>=1.8.2",
  "ptitprince>=0.3.1",
  "pycrostates>=0.6.1",
  "pymatreader>=1.1.0",
  "pyparsing>=3.2.5",
  "python-decouple>=3.8",
  "pytz>=2025.2",
  "PyWavelets>=1.9.0",
  "scikit-learn>=1.8.0",
  "scikit-misc>=0.5.1",
  "scipy>=1.16.2",
  "seaborn>=0.13.2",
  "skrebate>=0.62",
  "sparse>=0.17.0",
  "SQLAlchemy>=2.0.44",
  "statsmodels>=0.14.5",
  "sympy>=1.14.0",
  "threadpoolctl>=3.6.0",
  "torch>=2.9.1",
  "tqdm>=4.67.1",
  "tzdata>=2025.3",
  "uncertainty-calibration>=0.1.4",
  "xgboost>=3.1.2",
  "xmltodict>=1.0.2",
  "yarg>=0.1.10",
]

[project.urls]
Homepage = "https://github.com/<user>/<repo>"
Issues = "https://github.com/<user>/<repo>/issues"

[tool.setuptools]
packages = ["ai_framework"]
